--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,16 @@
 language: java
+sudo: false
+install: true
+
 jdk:
   - oraclejdk8
+
+script:
+  - ./gradlew sonarqube -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_LOGIN
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+    - '$HOME/.gradle'
+    - '.gradle'
