--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,51 @@
-group 'com.apptastic'
-version '1.0-SNAPSHOT'
+plugins {
+    id "org.sonarqube" version "2.6.2"
+    id "com.jfrog.bintray" version "1.7.3"
+}
 
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: "jacoco"
 
+group 'com.apptastic'
+version '1.0.0'
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
+}
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    publications = ['MyPublication']
+    dryRun = false
+    publish = true
+    override = true
+    pkg {
+        repo = 'maven'
+        name = 'insynsregistret'
+        licenses = ['MIT']
+        version {
+            name = "1.0.0"
+        }
+    }
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId 'com.apptastic'
+            artifactId 'insynsregistret'
+            version '1.0.0'
+        }
+    }
 }
