--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id "org.sonarqube" version "2.6.2"
-    id "com.jfrog.bintray" version "1.7.3"
+    id 'org.sonarqube' version '2.6.2'
+    id 'com.jfrog.bintray' version '1.7.3'
+    id 'org.ajoberstar.git-publish' version '0.3.3'
 }
 
 apply plugin: 'java'
@@ -72,4 +73,17 @@ publishing {
             artifact javadocJar
         }
     }
+}
+
+gitPublish {
+    repoUri = 'https://github.com/w3stling/insynsregistret.git'
+    branch = 'gh-pages'
+
+    contents {
+        from("$buildDir/docs/javadoc") {
+            into 'javadoc'
+        }
+    }
+
+    commitMessage = 'Publishing javadoc'
 }
