--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: "jacoco"
+apply plugin: 'jacoco'
 
 group 'com.apptastic'
-version '1.0.0'
+version "${version}"
 sourceCompatibility = 1.8
 
 repositories {
@@ -55,8 +55,8 @@ bintray {
         licenses = ['MIT']
 
         version {
-            name = '1.0.0'
-            released  = new Date()
+            name = System.properties['version']
+            released = new Date()
         }
     }
 }
@@ -67,7 +67,7 @@ publishing {
             from components.java
             groupId 'com.apptastic'
             artifactId 'insynsregistret'
-            version '1.0.0'
+            version "${version}"
 
             artifact sourcesJar
             artifact javadocJar
@@ -81,7 +81,7 @@ gitPublish {
 
     contents {
         from("$buildDir/docs/javadoc") {
-            into 'javadoc'
+            into "javadoc/${version}"
         }
     }
 
