--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
+apply plugin: 'distribution'
 
 group 'com.apptastic'
 version "${version}"
@@ -21,6 +22,24 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
+}
+
+distTar {
+    compression = Compression.GZIP
+    extension = 'tar.gz'
+}
+
+distributions {
+    main {
+        contents {
+            from("$projectDir")
+            exclude('.gitignore')
+            exclude('.travis.yml')
+            exclude('*.iml')
+            exclude('out')
+            exclude('build')
+        }
+    }
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
