--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,29 @@ install: true
 jdk:
   - oraclejdk8
 
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.sonar/cache
+    - $HOME/.gradle
+
 script:
   - ./gradlew sonarqube -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_LOGIN
 
-cache:
-  directories:
-    - '$HOME/.m2/repository'
-    - '$HOME/.sonar/cache'
-    - '$HOME/.gradle'
-    - '.gradle'
+after_success:
+  - ./gradlew bintrayUpload gitPublishPush
+
+before_deploy:
+  - git config --local user.name $GIT_NAME
+  - git config --local user.email $GIT_EMAIL
+  - ./gradlew assembleDist
+
+deploy:
+  provider: releases
+  api_key: $GRGIT_USER
+  file:
+    - $TRAVIS_BUILD_DIR/build/distributions/insynsregistret*.zip
+    - $TRAVIS_BUILD_DIR/build/distributions/insynsregistret*.tar.gz
+  skip_cleanup: true
+  on:
+    tags: true
