Remove java doc from old snapshot builds

--- a/build.gradle
+++ b/build.gradle
@@ -161,6 +161,7 @@ gitPublish {
 
     preserve {
         include 'javadoc/**'
+        exclude 'javadoc/*-SNAPSHOT/**'
     }
 
     commitMessage = 'Publishing javadoc'
