--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'org.sonarqube' version '2.6.2'
     id 'com.jfrog.bintray' version '1.8.4'
-    id 'com.jfrog.artifactory' version '4.7.5'
-    id 'org.ajoberstar.git-publish' version '1.0.1'
+    id 'com.jfrog.artifactory' version '4.8.1'
+    id 'org.ajoberstar.git-publish' version '2.0.0-rc.2'
     id 'net.researchgate.release' version '2.7.0'
     id 'me.champeau.gradle.jmh' version '0.4.7'
 }
@@ -17,8 +17,8 @@ apply plugin: 'me.champeau.gradle.jmh'
 group 'com.apptastic'
 version "${version}"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
 }
 
 jmh {
@@ -84,6 +84,22 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
+}
+
+ext.moduleName = 'com.apptastic.insynsregistret'
+
+compileJava {
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath
+        ]
+        classpath = files()
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.2"
 }
 
 artifacts {
