--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'org.sonarqube' version '2.7'
     id 'com.jfrog.bintray' version '1.8.4'
-    id 'com.jfrog.artifactory' version '4.9.3'
-    id 'org.ajoberstar.git-publish' version '2.0.0'
+    id 'com.jfrog.artifactory' version '4.9.5'
+    id 'org.ajoberstar.git-publish' version '2.1.1'
     id 'net.researchgate.release' version '2.8.0'
     id 'me.champeau.gradle.jmh' version '0.4.8'
 }
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.5'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
 }
 
 jmh {
@@ -77,12 +77,12 @@ distributions {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
