--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'org.sonarqube' version '2.7'
+    id 'org.sonarqube' version '2.7.1'
     id 'com.jfrog.bintray' version '1.8.4'
-    id 'com.jfrog.artifactory' version '4.9.5'
+    id 'com.jfrog.artifactory' version '4.9.8'
     id 'org.ajoberstar.git-publish' version '2.1.1'
-    id 'net.researchgate.release' version '2.8.0'
+    id 'net.researchgate.release' version '2.8.1'
     id 'me.champeau.gradle.jmh' version '0.4.8'
 }
 
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
 }
 
 jmh {
@@ -89,6 +89,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 ext.moduleName = 'com.apptastic.insynsregistret'
 
 compileJava {
+    options.encoding = "UTF-8"
     inputs.property('moduleName', moduleName)
     doFirst {
         options.compilerArgs = [
@@ -98,8 +99,12 @@ compileJava {
     }
 }
 
+compileTestJava {
+    options.encoding = "UTF-8"
+}
+
 jacoco {
-    toolVersion = "0.8.3"
+    toolVersion = "0.8.4"
 }
 
 artifacts {
