--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,10 @@ compileTestJava {
     options.encoding = "UTF-8"
 }
 
+javadoc {
+    options.encoding = "UTF-8"
+}
+
 jacoco {
     toolVersion = "0.8.4"
 }
