--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'org.sonarqube' version '2.8'
     id 'com.jfrog.bintray' version '1.8.4'
-    id 'com.jfrog.artifactory' version '4.11.0'
-    id 'org.ajoberstar.git-publish' version '2.1.2'
+    id 'com.jfrog.artifactory' version '4.13.0'
+    id 'org.ajoberstar.git-publish' version '2.1.3'
     id 'net.researchgate.release' version '2.8.1'
     id 'me.champeau.gradle.jmh' version '0.5.0'
 }
@@ -109,6 +109,13 @@ javadoc {
 
 jacoco {
     toolVersion = "0.8.5"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/report.xml")
+    }
 }
 
 artifacts {
