--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,14 @@
 plugins {
-    id 'org.sonarqube' version '2.8'
-    id 'com.jfrog.bintray' version '1.8.4'
-    id 'com.jfrog.artifactory' version '4.13.0'
-    id 'org.ajoberstar.git-publish' version '2.1.3'
-    id 'net.researchgate.release' version '2.8.1'
+    id 'java-library'
+    id 'jacoco'
+    id 'signing'
+    id 'maven-publish'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+    id 'org.sonarqube' version '3.4.0.2513'
     id 'me.champeau.gradle.jmh' version '0.5.0'
 }
 
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
-apply plugin: 'distribution'
-apply plugin: 'me.champeau.gradle.jmh'
-
-group 'com.apptastic'
+group 'com.apptasticsoftware'
 version "${version}"
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -22,16 +16,98 @@ targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
-    jcenter()
-
-    maven {
-        url  "https://jcenter.bintray.com"
-    }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
+    testImplementation(platform('org.junit:junit-bom:5.9.0'))
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
+    testImplementation('org.mockito:mockito-core:2.28.2')
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+ext.moduleName = 'com.apptasticsoftware.insynsregistret'
+
+compileJava {
+    options.encoding = "UTF-8"
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath
+        ]
+        classpath = files()
+        classpath = files()
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/report.xml")
+    }
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
+    connectTimeout = Duration.ofMinutes(3)
+    clientTimeout = Duration.ofMinutes(3)
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+            pom {
+                name = 'Insynsregistret'
+                description = 'Java library for extracting data from the Financial Supervisory Authority (Finansinspektionen) insider registry.'
+                url = 'https://github.com/w3stling/insynsregistret'
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://raw.githubusercontent.com/w3stling/insynsregistret/master/LICENSE'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'w3stling'
+                        name = 'Apptastic Software'
+                        email = 'apptastic.software@gmail.com'
+                    }
+                }
+                scm {
+                    url = 'https://github.com/w3stling/insynsregistret'
+                    connection = 'scm:git://github.com/w3stling/insynsregistret.git'
+                    developerConnection = 'scm:git:ssh://github.com/w3stling/insynsregistret.git'
+                }
+            }
+        }
+    }
+}
+
+signing {
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
 }
 
 jmh {
@@ -58,147 +134,10 @@ jmh {
     warmupMode = 'INDI' // Warmup mode for warming up selected benchmarks. Warmup modes are: [INDI, BULK, BULK_INDI].
 }
 
-distTar {
-    compression = Compression.GZIP
-    extension = 'tar.gz'
-}
-
-distributions {
-    main {
-        contents {
-            from("$projectDir")
-            exclude('.gitignore')
-            exclude('.travis.yml')
-            exclude('*.iml')
-            exclude('out')
-            exclude('build')
-        }
+sonarqube {
+    properties {
+        property "sonar.projectKey", "w3stling_insynsregistret"
+        property "sonar.organization", "w3stling"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    archiveClassifier.set('sources')
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    archiveClassifier.set('javadoc')
-    from javadoc.destinationDir
-}
-
-ext.moduleName = 'com.apptastic.insynsregistret'
-
-compileJava {
-    options.encoding = "UTF-8"
-    inputs.property('moduleName', moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath
-        ]
-        classpath = files()
-    }
-}
-
-compileTestJava {
-    options.encoding = "UTF-8"
-}
-
-javadoc {
-    options.encoding = "UTF-8"
-}
-
-jacoco {
-    toolVersion = "0.8.5"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        xml.destination file("${buildDir}/reports/jacoco/report.xml")
-    }
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
-
-bintray {
-    if (!project.version.endsWith("-SNAPSHOT")) {
-        user = System.getenv('BINTRAY_USER')
-        key = System.getenv('BINTRAY_KEY')
-        publications = ['InsynsregistretPublication']
-        dryRun = false
-        publish = true
-        override = true
-
-        pkg {
-            repo = 'maven-repo'
-            name = 'insynsregistret'
-            desc = 'Java library for extracting data from the Financial Supervisory Authority (Finansinspektionen) insider registry.'
-            issueTrackerUrl = 'https://github.com/w3stling/insynsregistret/issues'
-            vcsUrl = 'https://github.com/w3stling/insynsregistret.git'
-            licenses = ['MIT']
-
-            version {
-                name = System.properties['version']
-                released = new Date()
-            }
-        }
-    }
-}
-
-artifactory {
-    contextUrl = 'https://oss.jfrog.org/artifactory'
-    publish {
-        repository {
-            if (project.version.endsWith("-SNAPSHOT")) {
-                repoKey = 'oss-snapshot-local'
-            } else {
-                repoKey = 'oss-release-local'
-            }
-            username = System.getenv('ARTIFACTORY_USERNAME')
-            password = System.getenv('ARTIFACTORY_PASSWORD')
-            maven = true
-        }
-        defaults {
-            publications ('InsynsregistretPublication')
-        }
-    }
-}
-
-publishing {
-    publications {
-        InsynsregistretPublication(MavenPublication) {
-            from components.java
-            groupId 'com.apptastic'
-            artifactId 'insynsregistret'
-            version "${version}"
-
-            artifact sourcesJar
-            artifact javadocJar
-        }
-    }
-}
-
-gitPublish {
-    repoUri = 'https://github.com/w3stling/insynsregistret.git'
-    branch = 'gh-pages'
-
-    contents {
-        from("$buildDir/docs/javadoc") {
-            into "javadoc/${version}"
-        }
-    }
-
-    preserve {
-        include 'javadoc/**'
-        exclude 'javadoc/*-SNAPSHOT/**'
-    }
-
-    commitMessage = 'Publishing javadoc'
-}
-
-release {
-    tagTemplate = 'v$version'
 }
