Updated build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
 
-      - name: Set up JDK 11 ⚙️
+      - name: Set up JDK 17 ⚙️
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Gradle dependencies cache ⚙️
@@ -79,11 +79,14 @@ jobs:
     steps:
       - name: Checkout repository ⚙️
         uses: actions/checkout@v3
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
 
-      - name: Set up JDK 11 ⚙️
+      - name: Set up JDK 17 ⚙️
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Cache SonarCloud packages ⚙️
@@ -115,7 +118,7 @@ jobs:
           echo "Next version: ${{ needs.build.outputs.next-version }}"
 
       - name: Analyze code 🔎️
-        run: ./gradlew test jacocoTestReport sonarqube --info -Dsonar.projectVersion=${{ needs.build.outputs.next-version }}-SNAPSHOT
+        run: ./gradlew test jacocoTestReport sonar --info -Dsonar.projectVersion=${{ needs.build.outputs.next-version }}-SNAPSHOT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -130,11 +133,14 @@ jobs:
     steps:
       - name: Checkout repository ⚙️
         uses: actions/checkout@v3
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
 
-      - name: Set up JDK 11 ⚙️
+      - name: Set up JDK 17 ⚙️
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Gradle dependencies cache ⚙️
@@ -182,11 +188,14 @@ jobs:
     steps:
       - name: Checkout repository ⚙️
         uses: actions/checkout@v3
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
 
-      - name: Set up JDK 11 ⚙️
+      - name: Set up JDK 17 ⚙️
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Gradle dependencies cache ⚙️
