--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'jacoco'
     id 'signing'
     id 'maven-publish'
+    id 'biz.aQute.bnd.builder' version '7.1.0'
     id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
     id 'org.sonarqube' version '6.1.0.5360'
     id 'me.champeau.gradle.jmh' version '0.5.3'
@@ -56,6 +57,24 @@ jacocoTestReport {
     reports {
         xml.required = true
         xml.outputLocation = file("${buildDir}/reports/jacoco/report.xml")
+    }
+}
+
+jar {
+    manifest {
+        attributes(
+                "Build-Jdk-Spec": java.targetCompatibility,
+                "Implementation-Title": "Insynsregistret",
+                "Implementation-Version": version,
+                "Specification-Title": "Insynsregistret",
+                "Specification-Version": version.replace("-SNAPSHOT", ""),
+                "Automatic-Module-Name": moduleName,
+                "Bundle-SymbolicName": moduleName,
+                "Bundle-Description": "Java library for extracting data from the Financial Supervisory Authority (Finansinspektionen) insider registry",
+                "Bundle-License": "https://opensource.org/licenses/MIT",
+                "Bundle-Name": "Insynsregistret",
+                "Export-Package": "*;-split-package:=merge-first;-noimport:=true",
+        )
     }
 }
 
