--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,11 +8,13 @@ updates:
   - package-ecosystem: "gradle" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     ignore:
       - dependency-name: "org.junit.jupiter:junit-jupiter"
         versions: [ ">=6.0.0" ]
+      - dependency-name: "nl.jqno.equalsverifier:equalsverifier"
+        versions: [ ">=4.0.0" ]
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
